--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "motion": "^12.7.3",
     "next": "^15.3.0",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
+    "react": "18.2.0",
     "react-animated-cursor": "^2.11.2",
-    "react-dom": "^19.1.0",
+    "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
     "react-lottie-player": "^2.1.0",
