--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,8 +11,8 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
-    "@react-three/drei": "^10.0.6",
-    "@react-three/fiber": "^9.1.2",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.13.4",
     "@types/three": "^0.175.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -21,7 +21,7 @@
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.488.0",
     "motion": "^12.7.3",
-    "next": "^15.3.0",
+    "next": "^14.2.28",
     "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-animated-cursor": "^2.11.2",
